<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.projectsunshine.ui.main.MainViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.main.ForecastFragment">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/invisible_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/city_tv"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                tools:text="Indore, IN"
                android:textAllCaps="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/invisible_toolbar" />


            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/location_fab"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/normal_margin"
                android:src="@drawable/ic_baseline_location_on_24"
                app:elevation="@dimen/fab_elevation"
                app:layout_constraintBottom_toBottomOf="@+id/today_date"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/today_date"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                app:layout_constraintStart_toStartOf="@id/city_tv"
                app:layout_constraintTop_toBottomOf="@id/city_tv"
                tools:text="Sun, 8 July" />

            <TextView
                android:id="@+id/today_day"
                style="@style/TextAppearance.MaterialComponents.Headline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:text="@string/today_text"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/today_date" />

            <ImageView
                android:id="@+id/weather_icon"
                android:layout_width="@dimen/icon_size"
                android:layout_height="@dimen/icon_size"
                android:layout_marginTop="@dimen/margin_double"
                android:layout_marginEnd="@dimen/normal_margin"
                android:contentDescription="@string/today_weather_description"
                android:src="@drawable/sunny_weather_icon"
                app:layout_constraintEnd_toStartOf="@+id/guideline4"
                app:layout_constraintTop_toBottomOf="@+id/today_day" />

            <TextView
                android:id="@+id/temperature_tv"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/normal_margin"
                android:textStyle="bold"
                app:layout_constraintLeft_toRightOf="@id/weather_icon"
                app:layout_constraintTop_toTopOf="@id/weather_icon"
                tools:text="30.08" />

            <TextView
                android:id="@+id/temperature_unit"
                style="@style/TextAppearance.MaterialComponents.Headline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.temperatureUnit}"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/temperature_tv"
                app:layout_constraintTop_toTopOf="@id/temperature_tv"
                tools:text=" K" />

            <TextView
                android:id="@+id/weather_desc"
                style="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/temperature_tv"
                app:layout_constraintTop_toBottomOf="@+id/temperature_tv"
                tools:text="Sunny" />

            <TextView
                android:id="@+id/details_tv"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_double"
                android:layout_marginBottom="@dimen/margin_double"
                app:layout_constraintBottom_toTopOf="@id/forecast_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/weather_icon" />

            <TextView
                android:id="@+id/forecast_tv"
                style="@style/TextAppearance.MaterialComponents.Headline6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/normal_margin"
                android:text="@string/forecast"
                app:layout_constraintBottom_toTopOf="@id/recycler_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/details_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:orientation="horizontal"
                android:padding="@dimen/half_margin"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forecast_tv"
                tools:listitem="@layout/forecast_item" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_circular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:indeterminate="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/city_tv" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>